[gd_scene load_steps=4 format=3 uid="uid://bm8fa3jivhp0f"]

[ext_resource type="Script" uid="uid://wrw82mrwx7ji" path="res://Scripts/main_menu.gd" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://6vwxo3ycvhna" path="res://Art/Reality Hyper Regular.ttf" id="2_48xlc"]
[ext_resource type="Texture2D" uid="uid://bbug2h2mxd3da" path="res://Art/title_picture.png" id="3_1ehe0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 687.0
offset_right = 333.0
offset_bottom = 710.0
text = "License: godotengine.org/license"

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.0
offset_top = -42.0
offset_right = -392.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="BestTimes" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.0
offset_top = 66.0
offset_right = -160.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
text = "Best Times
"

[node name="HowToPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.0
offset_top = 174.0
offset_right = -90.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
text = "How To Play
"

[node name="Oscillating" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 128
text = "OSCILLATING"
horizontal_alignment = 1

[node name="Offenses1" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 251.0
theme_override_colors/font_color = Color(1, 0.015686275, 0.3372549, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 128
text = "
O  F  N  E  "
horizontal_alignment = 1

[node name="Offenses2" type="Label" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 17.0
offset_right = 1301.0
offset_bottom = 268.0
theme_override_colors/font_color = Color(0.047058824, 0.9019608, 0.9490196, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 128
text = "
  F  E  S  S "
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(926, 487)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehe0")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="BestTimes" to="." method="_on_best_times_pressed"]
[connection signal="pressed" from="HowToPlay" to="." method="_on_how_to_play_pressed"]
